--- a/doc/references.bib
+++ b/doc/references.bib
@@ -46,6 +46,15 @@
   publisher = {{JSTOR}}
 }
 
+@article{ahler,
+  title = {Micro-{{Task Market}} for {{Lemons}}},
+  author = {Ahler, Douglas J and Roush, Carolyn E and Sood, Gaurav},
+  pages = {67},
+  abstract = {While Amazon's Mechanical Turk (MTurk) has reduced the cost of collecting original data, in 2018, researchers noted the potential existence of a large number of bad actors on the platform. To evaluate data quality on MTurk, we fielded three surveys between 2018 and 2020. While find no evidence of a ``bot epidemic,'' significant portions of the data\textemdash between 25\%-35\%\textemdash are of dubious quality. While the number of IP addresses that completed the survey multiple times or circumvented location requirements fell almost 50\% over time, suspicious IP addresses are more prevalent on MTurk than on other platforms. Furthermore, many respondents appear to respond humorously or insincerely, and this behavior increased over 200\% from 2018-2020. Importantly, these low-quality responses attenuate observed treatment effects by magnitudes ranging from approximately 10-30\%.},
+  language = {en},
+  file = {C\:\\Users\\robly\\Zotero\\storage\\JDKNSRB3\\Ahler et al. - Micro-Task Market for Lemons.pdf}
+}
+
 @book{ahler2015,
   title = {Donald Trump Is a Textbook Example of an Ideological Moderate},
   author = {Ahler, Doug and Broockman, David},
@@ -655,6 +664,23 @@
   publisher = {{Cambridge University Press New York, USA}}
 }
 
+@article{goodman2013,
+  title = {Data {{Collection}} in a {{Flat World}}: {{The Strengths}} and {{Weaknesses}} of {{Mechanical Turk Samples}}: {{Data Collection}} in a {{Flat World}}},
+  shorttitle = {Data {{Collection}} in a {{Flat World}}},
+  author = {Goodman, Joseph K. and Cryder, Cynthia E. and Cheema, Amar},
+  year = {2013},
+  month = jul,
+  journal = {Journal of Behavioral Decision Making},
+  volume = {26},
+  number = {3},
+  pages = {213--224},
+  issn = {08943257},
+  doi = {10.1002/bdm.1753},
+  abstract = {Mechanical Turk (MTurk), an online labor system run by Amazon.com, provides quick, easy, and inexpensive access to online research participants. As use of MTurk has grown, so have questions from behavioral researchers about its participants, reliability, and low compensation. In this article, we review recent research about MTurk and compare MTurk participants with community and student samples on a set of personality dimensions and classic decision-making biases. Across two studies, we find many similarities between MTurk participants and traditional samples, but we also find important differences. For instance, MTurk participants are less likely to pay attention to experimental materials, reducing statistical power. They are more likely to use the Internet to find answers, even with no incentive for correct responses. MTurk participants have attitudes about money that are different from a community sample's attitudes but similar to students' attitudes. Finally, MTurk participants are less extraverted and have lower self-esteem than other participants, presenting challenges for some research domains. Despite these differences, MTurk participants produce reliable results consistent with standard decision-making biases: they are present biased, risk-averse for gains, risk-seeking for losses, show delay/expedite asymmetries, and show the certainty effect\textemdash with almost no significant differences in effect sizes from other samples. We conclude that MTurk offers a highly valuable opportunity for data collection and recommend that researchers using MTurk (1) include screening questions that gauge attention and language comprehension; (2) avoid questions with factual answers; and (3) consider how individual differences in financial and social domains may influence results. Copyright \textcopyright{} 2012 John Wiley \& Sons, Ltd.},
+  language = {en},
+  file = {C\:\\Users\\robly\\Zotero\\storage\\SITQTANA\\Goodman et al. - 2013 - Data Collection in a Flat World The Strengths and.pdf}
+}
+
 @article{griffin2004,
   title = {Interregnum or Endgame?},
   author = {Griffin, Roger},
@@ -772,6 +798,23 @@
   publisher = {{Working Paper}}
 }
 
+@article{hauser2016,
+  title = {Attentive {{Turkers}}: {{MTurk}} Participants Perform Better on Online Attention Checks than Do Subject Pool Participants},
+  shorttitle = {Attentive {{Turkers}}},
+  author = {Hauser, David J. and Schwarz, Norbert},
+  year = {2016},
+  month = mar,
+  journal = {Behavior Research Methods},
+  volume = {48},
+  number = {1},
+  pages = {400--407},
+  issn = {1554-3528},
+  doi = {10.3758/s13428-015-0578-z},
+  abstract = {Participant attentiveness is a concern for many researchers using Amazon's Mechanical Turk (MTurk). Although studies comparing the attentiveness of participants on MTurk versus traditional subject pool samples have provided mixed support for this concern, attention check questions and other methods of ensuring participant attention have become prolific in MTurk studies. Because MTurk is a population that learns, we hypothesized that MTurkers would be more attentive to instructions than are traditional subject pool samples. In three online studies, participants from MTurk and collegiate populations participated in a task that included a measure of attentiveness to instructions (an instructional manipulation check: IMC). In all studies, MTurkers were more attentive to the instructions than were college students, even on novel IMCs (Studies 2 and 3), and MTurkers showed larger effects in response to a minute text manipulation. These results have implications for the sustainable use of MTurk samples for social science research and for the conclusions drawn from research with MTurk and college subject pool samples.},
+  language = {en},
+  file = {C\:\\Users\\robly\\Zotero\\storage\\6X4V2EIE\\Hauser and Schwarz - 2016 - Attentive Turkers MTurk participants perform bett.pdf}
+}
+
 @article{hayes2017,
   title = {The Symbolic Benefits of Descriptive and Substantive Representation},
   author = {Hayes, Matthew and Hibbing, Matthew V},
@@ -799,6 +842,40 @@
   number = {4},
   pages = {775--790},
   publisher = {{Cambridge University Press}}
+}
+
+@article{horton2011,
+  title = {The Online Laboratory: Conducting Experiments in a Real Labor Market},
+  shorttitle = {The Online Laboratory},
+  author = {Horton, John J. and Rand, David G. and Zeckhauser, Richard J.},
+  year = {2011},
+  month = sep,
+  journal = {Experimental Economics},
+  volume = {14},
+  number = {3},
+  pages = {399--425},
+  issn = {1386-4157, 1573-6938},
+  doi = {10.1007/s10683-011-9273-9},
+  abstract = {Online labor markets have great potential as platforms for conducting experiments. They provide immediate access to a large and diverse subject pool, and allow researchers to control the experimental context. Online experiments, we show, can be just as valid\textemdash both internally and externally\textemdash as laboratory and field experiments, while often requiring far less money and time to design and conduct. To demonstrate their value, we use an online labor market to replicate three classic experiments. The first finds quantitative agreement between levels of cooperation in a prisoner's dilemma played online and in the physical laboratory. The second shows\textemdash consistent with behavior in the traditional laboratory\textemdash that online subjects respond to priming by altering their choices. The third demonstrates that when an identical decision is framed differently, individuals reverse their choice, thus replicating a famed Tversky-Kahneman result. Then we conduct a field experiment showing that workers have upward-sloping labor supply curves. Finally, we analyze the challenges to online experiments, proposing methods to cope with the unique threats to validity in an online setting, and examining the conceptual issues surrounding the external validity of online results. We conclude by presenting our views on the potential role that online experiments can play within the social sciences, and then recommend software development priorities and best practices.},
+  language = {en},
+  file = {C\:\\Users\\robly\\Zotero\\storage\\WS77F7M9\\Horton et al. - 2011 - The online laboratory conducting experiments in a.pdf}
+}
+
+@article{horton2011a,
+  title = {The Online Laboratory: Conducting Experiments in a Real Labor Market},
+  shorttitle = {The Online Laboratory},
+  author = {Horton, John J. and Rand, David G. and Zeckhauser, Richard J.},
+  year = {2011},
+  month = sep,
+  journal = {Experimental Economics},
+  volume = {14},
+  number = {3},
+  pages = {399--425},
+  issn = {1386-4157, 1573-6938},
+  doi = {10.1007/s10683-011-9273-9},
+  abstract = {Online labor markets have great potential as platforms for conducting experiments. They provide immediate access to a large and diverse subject pool, and allow researchers to control the experimental context. Online experiments, we show, can be just as valid\textemdash both internally and externally\textemdash as laboratory and field experiments, while often requiring far less money and time to design and conduct. To demonstrate their value, we use an online labor market to replicate three classic experiments. The first finds quantitative agreement between levels of cooperation in a prisoner's dilemma played online and in the physical laboratory. The second shows\textemdash consistent with behavior in the traditional laboratory\textemdash that online subjects respond to priming by altering their choices. The third demonstrates that when an identical decision is framed differently, individuals reverse their choice, thus replicating a famed Tversky-Kahneman result. Then we conduct a field experiment showing that workers have upward-sloping labor supply curves. Finally, we analyze the challenges to online experiments, proposing methods to cope with the unique threats to validity in an online setting, and examining the conceptual issues surrounding the external validity of online results. We conclude by presenting our views on the potential role that online experiments can play within the social sciences, and then recommend software development priorities and best practices.},
+  language = {en},
+  file = {C\:\\Users\\robly\\Zotero\\storage\\GFGXW54Z\\Horton et al. - 2011 - The online laboratory conducting experiments in a.pdf}
 }
 
 @article{iyengar2012,
@@ -858,6 +935,22 @@
   journal = {Legislative Studies Quarterly},
   pages = {5--32},
   publisher = {{JSTOR}}
+}
+
+@article{johnson2020,
+  title = {Amazon {{Mechanical Turk}} Workers Can Provide Consistent and Economically Meaningful Data},
+  author = {Johnson, David and Ryan, John Barry},
+  year = {2020},
+  month = jul,
+  journal = {Southern Economic Journal},
+  volume = {87},
+  number = {1},
+  pages = {369--385},
+  issn = {0038-4038, 2325-8012},
+  doi = {10.1002/soej.12451},
+  abstract = {Amazon Mechanical Turk (AMT) is an online labor market that is being used increasingly often in the social sciences. This occurs despite significant questions regarding efficacy of the platform. In this article, we attempt to address some of these questions by exploring the consistency of the characteristics of individuals who participate in studies posted on AMT. The primary individuals analyzed in this study are subjects who participated in at least two of eleven experiments that were run on AMT between September of 2012 and January of 2018. We demonstrate subjects consistently report their age, gender, subjective willingness to take risk, and impulsiveness. Further, subjective willingness to take risk is found to be significantly correlated with decisions made in a simple lottery experiment with real stakes\textemdash even when the subjective risk measure is reported months, sometimes years, in the past. This suggests the quality of data obtained via AMT is not terribly harmed by the lack of control and low stakes.},
+  language = {en},
+  file = {C\:\\Users\\robly\\Zotero\\storage\\3G44I5WT\\Johnson and Ryan - 2020 - Amazon Mechanical Turk workers can provide consist.pdf}
 }
 
 @article{johnston2017,
@@ -1113,6 +1206,23 @@
   publisher = {{University of Chicago Press}}
 }
 
+@article{leonardelli2015,
+  title = {Social {{Categorization}} in {{Intergroup Contexts}}: {{Three Kinds}} of {{Self}}-{{Categorization}}: {{Three Kinds}} of {{Self}}-{{Categorization}}},
+  shorttitle = {Social {{Categorization}} in {{Intergroup Contexts}}},
+  author = {Leonardelli, Geoffrey J. and Toh, Soo Min},
+  year = {2015},
+  month = feb,
+  journal = {Social and Personality Psychology Compass},
+  volume = {9},
+  number = {2},
+  pages = {69--87},
+  issn = {17519004},
+  doi = {10.1111/spc3.12150},
+  abstract = {In reviewing self-categorization theory and the literature upon which it is based, we conclude that individuals' attempts to form social categories could lead to three kinds of self-categorization. We label them intergroup categorization, ingroup categorization, and outgroup categorization. We review literature supporting these three types and argue that they can help to explain and organize the existing evidence. Moreover, we conclude that distinguishing these three kinds of selfcategorization lead to novel predictions regarding social identity, social cognition, and groups. We offer some of those predictions by discussing their potential causes (building from optimal distinctiveness and security seeking literatures) and implications (on topics including prototype complexity, self-stereotyping, stereotype formation, intergroup behavior, dual identity, conformity, and the psychological implications of perceiving uncategorized collections of people). This paper offers a platform from which to build theoretical and empirical advances in social identity, social cognition, and intergroup relations.},
+  language = {en},
+  file = {C\:\\Users\\robly\\Zotero\\storage\\7YTQWKFJ\\Leonardelli and Toh - 2015 - Social Categorization in Intergroup Contexts Thre.pdf}
+}
+
 @book{levendusky2009,
   title = {The Partisan Sort: How Liberals Became Democrats and Conservatives Became Republicans},
   author = {Levendusky, Matthew},
@@ -1240,6 +1350,23 @@
   number = {3},
   pages = {472--482},
   publisher = {{Elsevier}}
+}
+
+@article{mead2012,
+  title = {When {{Me}} versus {{You Becomes Us}} versus {{Them}}: {{How Intergroup Competition Shapes Ingroup Psychology}}: {{Intergroup Competition}} - {{Ingroup Psychology}}},
+  shorttitle = {When {{Me}} versus {{You Becomes Us}} versus {{Them}}},
+  author = {Mead, Nicole and Maner, Jon},
+  year = {2012},
+  month = aug,
+  journal = {Social and Personality Psychology Compass},
+  volume = {6},
+  number = {8},
+  pages = {566--574},
+  issn = {17519004},
+  doi = {10.1111/j.1751-9004.2012.00447.x},
+  abstract = {Throughout evolutionary history, intergroup competition has been an influential part of social life. Although the topic has received substantial empirical attention among social psychologists, the majority of that work has focused on how ingroup and outgroup members regard one another. Only recently have researchers begun examining how intergroup rivalry changes that way that ingroup members perceive and relate to one another. New findings suggest that a variety of within-group processes are influenced by the presence of a rival outgroup. In general, altruistic cooperation and prosocial motives increase among ingroup members when their group competes against another. The relationship between leaders and followers also shifts in response to intergroup rivalry: rather than wielding their power for selfish purposes, leaders prioritize the needs of their group. On the flip side, followers' choice of leader changes, preferring males during times of intergroup competition but females in the absence of competition. Given the substantial impact of intergroup competition on ingroup processes, future research should continue to deepen the field's knowledge of this topic. Additionally, the scope of research should be broadened to capture the effect of intergroup competition on ingroup dynamics, such as performance and group outcomes.},
+  language = {en},
+  file = {C\:\\Users\\robly\\Zotero\\storage\\7NCRYSH4\\Mead and Maner - 2012 - When Me versus You Becomes Us versus Them How Int.pdf;C\:\\Users\\robly\\Zotero\\storage\\C2NHZHN9\\intergroup-leonardelli-2015.pdf}
 }
 
 @book{melzer2009,
@@ -1450,6 +1577,29 @@
   publisher = {{JSTOR}}
 }
 
+@misc{searles2015,
+  title = {Researchers Are Rushing to {{Amazon}}'s {{Mechanical Turk}}. {{Should}} They?: {{Here}} Are Four Tips for Using "Crowdsourced" Participants for Research},
+  author = {Searles, Kathleen and Ryan, John B.},
+  year = {2015},
+  month = may,
+  journal = {Washington Post \textendash{} Blogs},
+  language = {English},
+  keywords = {General Interest Periodicals–United States},
+  file = {C\:\\Users\\robly\\Zotero\\storage\\UP8RI64L\\searles-ryan-mturk.pdf}
+}
+
+@misc{seitz-wald2016,
+  title = {Democrats {{Move Further Left With New Party Platform}}},
+  author = {{Seitz-Wald}, Alex},
+  year = {2016},
+  month = jul,
+  journal = {NBC News},
+  abstract = {Democrats have drafted what is likely to be the most progressive platform in the party's history, but Bernie Sanders supporters are still not satisfied.},
+  howpublished = {https://www.nbcnews.com/politics/2016-election/democrats-take-step-left-new-platform-n602791},
+  language = {en},
+  file = {C\:\\Users\\robly\\Zotero\\storage\\KQ85AYS5\\democrats-take-step-left-new-platform-n602791.html}
+}
+
 @article{shadish2002,
   title = {Experimental and Quasi-Experimental Designs for Generalized Causal Inference},
   author = {Shadish, William R and Cook, Thomas D and Campbell, Donald T},
@@ -1555,6 +1705,21 @@
   author = {Swain, Carol Miller},
   year = {1995},
   publisher = {{Harvard University Press}}
+}
+
+@article{tajfel1974,
+  title = {Social Identity and Intergroup Behaviour},
+  author = {Tajfel, Henri},
+  year = {1974},
+  month = apr,
+  journal = {Social Science Information},
+  volume = {13},
+  number = {2},
+  pages = {65--93},
+  issn = {0539-0184, 1461-7412},
+  doi = {10.1177/053901847401300204},
+  language = {en},
+  file = {C\:\\Users\\robly\\Zotero\\storage\\XNVF4GMA\\Tajfel - 1974 - Social identity and intergroup behaviour.pdf}
 }
 
 @book{theeconomist.com2019,
@@ -1675,6 +1840,18 @@
 
 @article{zotero-198,
   type = {Article}
+}
+
+@article{zotero-201,
+  type = {Article}
+}
+
+@article{zotero-214,
+  type = {Article}
+}
+
+@misc{zotero-215,
+  type = {Misc}
 }
 
 
